--- a/core/templates/documents/delivery_notice.html
+++ b/core/templates/documents/delivery_notice.html
@@ -124,7 +124,7 @@
 									<h2>Delivery Notice</h2><br/>
 									<h4>{{customer.name}}</h4>
 									{{customer.address|linebreaks}}
-									CVR: {{customer.cvr}}<br/>
+									VAT number: {{customer.cvr}}<br/>
 									Attn: {{delivery_notice.contact_person}}<br/>
 									{{delivery_notice.contact_email}}
 								</td>
