--- a/core/templates/documents/order_confirmation.html
+++ b/core/templates/documents/order_confirmation.html
@@ -217,7 +217,7 @@
 								</td>
 
                                 <td style="text-align: right;">
-									CVR: {{tegnology.cvr}}<br/>
+									VAT number: {{tegnology.cvr}}<br/>
 									phone: {{tegnology.phone}}<br/>
 									e-mail: {{order_confirmation.sender_email}} <br/>
 								</td>
