--- a/core/templates/documents/quotation.html
+++ b/core/templates/documents/quotation.html
@@ -125,7 +125,7 @@
 									<h2>Quotation</h2><br/>
 									<h4>{{customer.name}}</h4>
 									{{customer.address|linebreaks}}
-									CVR: {{customer.cvr}}<br/>
+									VAT number: {{customer.cvr}}<br/>
 									Attn: {{quotation.contact_person}}<br/>
 									{{quotation.contact_email}}
 								</td>
@@ -184,7 +184,7 @@
 						<table>
 							<tr>
 								<td> The quoted price includes shipment.<br/>
-                                    Est. Delivery Time: {{quotation.est_delivery_time}} <br/>
+                                    Est. delivery time: {{quotation.est_delivery_time}} <br/>
                                     All prices are in {{currency}} and excl. VAT <br/>
                                     Terms and Conditions according to Orgalime S2022 <br/>
                                 </td>
