--- a/core/templates/documents/invoice.html
+++ b/core/templates/documents/invoice.html
@@ -29,10 +29,6 @@
 				vertical-align: top;
 			}
 
-			.invoice-box table tr td:nth-child(2) {
-				text-align: right;
-			}
-
 			.invoice-box table tr.top table td {
 				padding-bottom: 20px;
 			}
@@ -186,14 +182,14 @@
 								</td>
 
 								<td style="text-align: left;">
-									Bank account: {{tegnology.bank_account}}<br/>
-									IBAN: {{tegnology.IBAN}}<br/>
-									SWIFT/BIC: {{tegnology.SWIFT_BIC}}<br/>
-                                    {{tegnology.bank_name}}
+									Bank account: 5444 0240394<br/>
+									IBAN: DK7054440000240394<br/>
+									SWIFT/BIC: ALBADKKK <br/>
+                                    Arbejdernes Landsbank
 								</td>
 
                                 <td style="text-align: right;">
-									CVR: {{tegnology.cvr}}<br/>
+									VAT number: {{tegnology.cvr}}<br/>
 									EORI: DK{{tegnology.cvr}}<br/>
 									phone: {{tegnology.phone}}<br/>
 									e-mail: {{tegnology.email}} <br/>
