--- a/core/templates/inventory.html
+++ b/core/templates/inventory.html
@@ -4,6 +4,9 @@
     <h1 class="h2">Entries</h1>
     <div class="btn-toolbar" role="toolbar">
         <div class="btn-group px-1">
+          <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#addProductModal" ><span data-feather="tag"></span> Create New Product </button>
+      </div>
+        <div class="btn-group px-1">
             <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#addEntryModal" ><span data-feather="plus-square"></span> Log New Inventory</button>
         </div>
         <div class="btn-group px-1">
@@ -14,6 +17,27 @@
   {{entries|safe}}
 
 <!-- Modal -->
+<div class="modal fade" id="addProductModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <form method="POST" class="modal-content">
+          {% csrf_token %}
+          <input type="hidden" name="form_id" value="add_new_product">
+          <div class="modal-header">
+            <h5 class="modal-title">Create New Product</h5>
+          </div>
+          <div class="modal-body">
+            {{ productform.as_p }}
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-sm btn-outline-success">Save</button>
+          </div>
+      </form>
+    </div>
+  </div>
+  </div>
+
 <div class="modal fade" id="addEntryModal" tabindex="-1" role="dialog" aria-hidden="true">
 <div class="modal-dialog" role="document">
   <div class="modal-content">
