added change currency

--- a/core/templates/components/modals/edit-customer-modal.html
+++ b/core/templates/components/modals/edit-customer-modal.html
@@ -5,7 +5,7 @@
             {% csrf_token %}
             <input type="hidden" name="form_id" value="edit_customer">
             <div class="modal-header">
-              <h5 class="modal-title">Edit Customer Data</h5>
+              <h5 class="modal-title">Edit Customer Info</h5>
             </div>
             <div class="modal-body"></div>
             <div class="modal-footer">
