--- a/core/templates/documents/order_confirmation.html
+++ b/core/templates/documents/order_confirmation.html
@@ -210,10 +210,10 @@
 								</td>
 
 								<td style="text-align: left;">
-									Bank account: {{tegnology.bank_account}}<br/>
-									IBAN: {{tegnology.IBAN}}<br/>
-									SWIFT/BIC: {{tegnology.SWIFT_BIC}}<br/>
-                                    {{tegnology.bank_name}}
+									Bank account: 5444 0240394<br/>
+									IBAN: DK7054440000240394 <br/>
+									SWIFT/BIC: ALBADKKK <br/>
+                                    Arbejdernes Landbank
 								</td>
 
                                 <td style="text-align: right;">
